--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "express": "^4.18.2",
         "express-fileupload": "^1.4.2",
         "express-rate-limit": "^6.9.0",
+        "ioredis": "^5.3.2",
         "jest": "^29.6.2",
         "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.2",
