--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,50 @@
 version: "3.8"
 services:
-  # API
-  greenhurb_api:
-    build: ./
-    restart: unless-stopped
-    env_file: ./.env
-    ports:
-      - $DOCKER_PORT:$APPLICATION_PORT
-    stdin_open: true
-    tty: true
-    volumes:
-      - .:/app
-      - /app/node_modules
+    # API
+    app:
+        build: ./
+        restart: unless-stopped
+        env_file: ./.env
+        environment:
+            DATABASE_NAME: ${DATABASE_NAME}
+            DATABASE_HOST: ${DATABASE_HOST}
+            DATABASE_PORT: 5455
+            DATABASE_USER: ${DATABASE_USER}
+            DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+            DATABASE_TYPE: ${DATABASE_TYPE}
+        ports:
+            - $PORT:$PORT
+        stdin_open: true
+        tty: true
+        volumes:
+            - .:/home/bun/app
+            - /home/bun/app/node_modules
+        depends_on:
+            - db
+
+    # Database
+    db:
+        image: postgres
+        restart: always
+        env_file: ./.env
+        container_name: nitprofile_database
+        ports:
+            - "5434:5432"
+        environment:
+            POSTGRES_HOST_AUTH_METHOD: md5
+            PGDATA: /var/lib/postgresql/data/pgdata
+            POSTGRES_USER: ${DATABASE_USER}
+            POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+            POSTGRES_DB: ${DATABASE_NAME}
+
+    # Adminer
+    adminer:
+        image: adminer
+        container_name: adminer
+        restart: always
+        ports:
+            - 8080:8080
+
+volumes:
+    pgdata:
+        driver: local
