--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,13 @@ DATABASE_PASSWORD=
 DATABASE_TYPE=
 
 # Auth
-ACCESS_TOKEN_SECRET=Damilola&12
-ACCESS_TOKEN_EXP=30s
-REFRESH_TOKEN_SECRET=Damilola&12
-REFRESH_TOKEN_EXP=1d
-ENCRYPTOR_SECRET_KEY=Damilola&12
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXP=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXP=
+INVITE_TOKEN_SECRET=
+INVITE_TOKEN_EXP=
+ENCRYPTOR_SECRET_KEY=
 
 # Cloudinary
 CLOUDINARY_NAME=
