--- a/package.json
+++ b/package.json
@@ -1,64 +1,71 @@
 {
-    "name": "nitprofile-api",
-    "module": "index.ts",
-    "scripts": {
-        "dev": "bun --hot run src/main.ts",
-        "migration:generate": "npx sequelize-cli migration:generate --name",
-        "seed:generate": "npx sequelize-cli seed:generate --name ",
-        "db:migrate": "npx sequelize-cli db:migrate",
-        "undo:db:migrate": "npx sequelize-cli db:migrate:undo --name",
-        "db:seed": "npx sequelize-cli db:seed:all"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/bun": "latest",
-        "@types/cookie-parser": "^1.4.4",
-        "@types/cors": "^2.8.13",
-        "@types/crypto-js": "^4.1.2",
-        "@types/express-fileupload": "^1.4.4",
-        "@types/jest": "^29.5.3",
-        "@types/jsonwebtoken": "^9.0.2",
-        "@types/module-alias": "^2.0.1",
-        "@types/node": "^20.4.2",
-        "@types/nodemailer": "^6.4.14",
-        "@types/nodemailer-sendgrid": "^1.0.3",
-        "@types/pg": "^8.10.2",
-        "@types/uuid": "^9.0.2",
-        "eslint": "^8.47.0",
-        "nodemon": "^3.0.1",
-        "prettier": "^2.3.2"
-    },
-    "peerDependencies": {
-        "typescript": "^5.0.0"
-    },
-    "dependencies": {
-        "@types/compression": "^1.7.5",
-        "@types/express": "^4.17.21",
-        "axios": "^1.6.2",
-        "bcrypt": "^5.1.1",
-        "cloudinary": "^1.41.0",
-        "compression": "^1.7.4",
-        "convert-csv-to-json": "^2.2.0",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "crypto-js": "^4.1.1",
-        "csvtojson": "^2.0.10",
-        "dotenv": "^16.3.1",
-        "eventemitter2": "^6.4.9",
-        "express": "^4.18.2",
-        "express-fileupload": "^1.4.2",
-        "express-rate-limit": "^6.9.0",
-        "ioredis": "^5.3.2",
-        "jest": "^29.6.2",
-        "joi": "^17.9.2",
-        "jsonwebtoken": "^9.0.2",
-        "module-alias": "^2.2.3",
-        "nodemailer": "^6.9.7",
-        "nodemailer-sendgrid": "^1.0.3",
-        "pg": "^8.11.3",
-        "pg-hstore": "^2.3.4",
-        "sequelize": "^6.35.2",
-        "socket.io": "^4.7.4",
-        "winston": "^3.10.0"
-    }
+  "name": "nitprofile-api",
+  "module": "index.ts",
+  "scripts": {
+    "dev": "bun --hot run src/main.ts",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000 --detectOpenHandles",
+    "migration:generate": "npx sequelize-cli migration:generate --name",
+    "seed:generate": "npx sequelize-cli seed:generate --name ",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "undo:db:migrate": "npx sequelize-cli db:migrate:undo --name",
+    "db:seed": "npx sequelize-cli db:seed:all"
+  },
+  "jest": {
+    "test environment": "node"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bun": "latest",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.13",
+    "@types/crypto-js": "^4.1.2",
+    "@types/express-fileupload": "^1.4.4",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/module-alias": "^2.0.1",
+    "@types/node": "^20.4.2",
+    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer-sendgrid": "^1.0.3",
+    "@types/pg": "^8.10.2",
+    "@types/sharp": "^0.32.0",
+    "@types/uuid": "^9.0.2",
+    "eslint": "^8.47.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^2.3.2"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
+    "compression": "^1.7.4",
+    "convert-csv-to-json": "^2.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "csvtojson": "^2.0.10",
+    "dotenv": "^16.3.1",
+    "eventemitter2": "^6.4.9",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.2",
+    "express-rate-limit": "^6.9.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
+    "nodemailer": "^6.9.7",
+    "nodemailer-sendgrid": "^1.0.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "sharp": "^0.33.2",
+    "socket.io": "^4.7.4",
+    "supertest": "^6.3.4",
+    "winston": "^3.10.0"
+  }
 }
