--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,8 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         command_timeout: 200m
-        script: "docker-compose up -d"
+        script: |
+          mkdir refactored-nitprofile/
+          cd refactored-nitprofile/
+          git pull origin deployment
+          docker-compose up -d
