edited nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,7 +39,7 @@ http {
     include                 /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam             /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-    upstream nitprofile {
+    upstream nitprofile_upstream {
         server                  adminer:8081;
 
         keepalive               100;
@@ -82,21 +82,21 @@ http {
             proxy_set_header    Upgrade $http_upgrade;
             proxy_set_header    Connection $connection_upgrade; #keep-alive;
             proxy_http_version  1.1;
-            proxy_pass          http://nitprofile;
+            proxy_pass          http://nitprofile_upstream;
             proxy_read_timeout 60s;
         
             # UNCOMMENT TO FIX CORS ERROR
             #Handle the preflight request
-            # if ($request_method = 'OPTIONS') {
-            #     add_header 'Access-Control-Allow-Origin' 'https://qa.streambix.com';
-            #     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
-            #     add_header 'Access-Control-Allow-Credentials' 'true' always;
-            #     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization,User-Agent,Keep-Alive' always;
-            #     add_header 'Access-Control-Max-Age' 1728000;
-            #     add_header 'Content-Type' 'text/plain charset=UTF-8';
-            #     add_header 'Content-Length' 0;
-            #     return 204;
-        # }
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'nithubdev.unilag.edu.ng';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization,User-Agent,Keep-Alive' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+        }
       }
     }
 
