--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,15 @@
 version: "3.8"
 services:
+    nginx:
+        image: nginx:latest
+        volumes:
+            - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
+            - ./nginx/log:/var/log/nginx
+            - /etc/letsencrypt:/etc/letsencrypt:ro
+        ports:
+            - "80:80"
+            - "443:443"
+
     app:
         build: ./
         restart: unless-stopped
