--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -12,6 +12,12 @@ http {
     access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
+    map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+    }
+
+
     # Set CORS headers globally across all locations
     add_header 'Access-Control-Allow-Origin' 'https://nithubdev.unilag.edu.ng' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
