--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: CI/CD Pipeline - runs tests and deploys to Azure VM
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["deployment"]
+    branches: ["development"]
 
   workflow_dispatch:
 
