--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,3 +33,8 @@ services:
         restart: always
         ports:
             - "8081:8080"  # Port changed to avoid conflict
+
+networks:
+  default:
+    name: nithub
+    external: false
