--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
         command_timeout: 200m
         script: |
           cd Nitprofile-Backend-Refactored/
-          git pull origin main
+          git pull origin development
           docker-compose restart
