changed docker file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,17 @@ services:
         restart: always
         ports:
             - 8080:8080
+    redis:
+        image: redis:latest
+        restart: always
+        ports:
+        - "6379:6379"
+        volumes:
+        - ./redis.conf:/usr/local/etc/redis/redis.conf
+        environment:
+        - REDIS_PASSWORD=my-password
+        - REDIS_PORT=6379
+        - REDIS_DATABASES=16
 
 volumes:
     pgdata:
